debut de du codage des pieces

--- a/Les echecs/Les echecs/Les echecs.csproj
+++ b/Les echecs/Les echecs/Les echecs.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Coordonee.cs" />
+    <Compile Include="Jeu.cs" />
+    <Compile Include="Pieces.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
